# swallow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  README.zh-CN.md  change.md  current_state.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml  rules.md  session_bootstrap.md
docs/: active_context.md  agent_taxonomy.md  architecture_principles.md  cli_reference.md  concerns_backlog.md  deploy.md  design_agents.md  design_gateway.md  design_wiki&executor.md  phase0_exit_checklist.md  phase10_kickoff_note.md  phase11_commit_summary.md  phase11_task_breakdown.md  phase1_kickoff_plan.md  phase2_closeout_note.md  phase2_task_breakdown.md  phase3_closeout_note.md  phase3_kickoff_note.md  phase3_task_breakdown.md  phase4_kickoff_note.md  phase5_closeout_note.md  phase5_task_breakdown.md  phase6_kickoff_note.md  phase7_kickoff_note.md  phase7_task_breakdown.md  phase8_task_breakdown.md  phase9_kickoff_note.md  phase9_task_breakdown.md  post_phase2_retrieval_kickoff_note.md  post_phase5_executor_and_external_input_kickoff_note.md  post_phase5_retrieval_memory_next_kickoff_note.md  roadmap.md  system_tracks.md
scripts/: phase0_acceptance_failure.sh  phase0_acceptance_mock.sh
tests/: audit_no_skip_drift.py  audit_route_knowledge_to_staged.py  conftest.py  test_binary_fallback.py  test_capability_enforcement.py  test_checkpoint_snapshot.py  test_cli.py  test_consistency_audit.py  test_cost_estimation.py  test_debate_loop.py  test_dialect_adapters.py  test_dispatch_policy.py  test_doctor.py  test_evidence_pack.py  test_execution_budget_policy.py  test_executor_async.py  test_executor_protocol.py  test_governance.py  test_grounding.py  test_ingestion_filters.py  test_ingestion_parsers.py  test_ingestion_pipeline.py  test_invariant_guards.py  test_knowledge_plane_facade.py  test_knowledge_relations.py  test_knowledge_store.py  test_librarian_executor.py  test_meta_optimizer.py  test_phase65_sqlite_truth.py  test_planner.py  test_raw_material_store.py  test_retrieval_adapters.py  test_retry_policy.py  test_review_gate.py  test_review_gate_async.py  test_router.py  test_run_task_subtasks.py  test_specialist_agents.py  (+6 more)
(+812 files in other folders)
