[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swallow"
version = "0.1.0"
description = "CLI-first Phase 0 bootstrap for a stateful AI workflow system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "Rocio" }]
dependencies = []

[project.scripts]
swl = "swallow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
